--- a/epic/package.json
+++ b/epic/package.json
@@ -46,10 +46,10 @@
   "build": "npm run build",
  
    
-  "test": "react-scripts test",
+  "test": "react-scripts test"
  
    
-  "eject": "react-scripts eject"
+  
  
   },
  
