--- a/epic/package.json
+++ b/epic/package.json
@@ -1,120 +1,14 @@
 {
- 
   "name": "epic",
- 
-  "version": "0.1.0",
- 
-  "private": true,
- 
-  "dependencies": {
- 
-   
-  "@testing-library/jest-dom": "^5.16.1",
- 
-   
-  "@testing-library/react": "^12.1.2",
- 
-   
-  "@testing-library/user-event": "^13.5.0",
- 
-   
-  "axios": "^0.24.0",
- 
-   
-  "netlify-cli": "^8.11.0",
- 
-   
-  "react": "^17.0.2",
- 
-   
-  "react-dom": "^17.0.2",
- 
-   
-  "react-scripts": "5.0.0",
- 
-   
-  "web-vitals": "^2.1.3"
- 
-  },
- 
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
   "scripts": {
- 
-   
-  "start": "react-scripts start",
- 
-   
-  "build": "npm run build",
- 
-   
-  "test": "react-scripts test"
- 
-   
-  
- 
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"npm run build"
   },
- 
-  "eslintConfig": {
- 
-   
-  "extends": [
- 
-   
-   
-  "react-app",
- 
-   
-   
-  "react-app/jest"
- 
-   
-  ]
- 
-  },
- 
-  "browserslist": {
- 
-   
-  "production": [
- 
-   
-   
-  ">0.2%",
- 
-   
-   
-  "not dead",
- 
-   
-   
-  "not op_mini all"
- 
-   
-  ],
- 
-   
-  "development": [
- 
-   
-   
-  "last 1 chrome version",
- 
-   
-   
-  "last 1 firefox version",
- 
-   
-   
-  "last 1 safari version"
- 
-   
-  ]
- 
-  },
- 
-  "oreder_direction": [
- 
-   
-  "extra fields  permitted"
- 
-  ]
+
+  "author": "",
+  "license": "ISC"
 }
